<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_marvel_row_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:elevation="@dimen/marvel_card_elevation"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_marvel_row_detail_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_marvel_row_detail_image"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/marvel_details_icon_size"
                    android:layout_marginStart="32dp"
                    android:paddingTop="20dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tv_marvel_row_detail_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="sans-serif-medium"
                    tools:text="Nombre"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_marvel_row_detail_image" />

                <TextView
                    android:id="@+id/tv_marvel_row_detail_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    tools:text="Descripción"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_marvel_row_detail_name" />

                <TextView
                    android:id="@+id/tv_marvel_row_detail_comics"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/marvel_details_comics_label"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_marvel_row_detail_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_marvel_row_detail_events"/>

                <TextView
                    android:id="@+id/tv_marvel_row_detail_events"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/marvel_details_events_label"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_marvel_row_detail_description"
                    app:layout_constraintStart_toEndOf="@id/tv_marvel_row_detail_comics"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_marvel_row_detail_series"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/marvel_details_series_label"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_marvel_row_detail_comics"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_marvel_row_detail_stories" />

                <TextView
                    android:id="@+id/tv_marvel_row_detail_stories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/marvel_details_events_label"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_marvel_row_detail_comics"
                    app:layout_constraintStart_toEndOf="@id/tv_marvel_row_detail_series"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_marvel_row_detail_button_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_marvel_row_detail_stories">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_marvel_row_detail_detail_btn"
                        style="@style/PrimaryButton.Rounded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/marvel_card_elevation"
                        android:text="@string/marvel_details_detail"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/bt_marvel_row_detail_wiki_btn"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_marvel_row_detail_wiki_btn"
                        style="@style/PrimaryButton.Rounded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/marvel_card_elevation"
                        android:text="@string/marvel_details_wiki"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/bt_marvel_row_detail_comiclink_btn"
                        app:layout_constraintRight_toLeftOf="@+id/bt_marvel_row_detail_detail_btn"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_marvel_row_detail_comiclink_btn"
                        style="@style/PrimaryButton.Rounded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/marvel_card_elevation"
                        android:text="@string/marvel_details_comic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/bt_marvel_row_detail_wiki_btn"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
